--- a/jogotecadb/requirements.txt
+++ b/jogotecadb/requirements.txt
@@ -1,6 +1,13 @@
+blinker==1.6.2
 click==8.1.6
-Flask==2.0.2
+Flask==2.3.3
+Flask-SQLAlchemy==3.0.3
+greenlet==2.0.2
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
-Werkzeug==2.3.6
+mysql-connector-python==8.0.28
+protobuf==4.24.1
+SQLAlchemy==2.0.20
+typing_extensions==4.7.1
+Werkzeug==2.3.7
